fix(html,css): fixed card spacing

--- a/css/helper.css
+++ b/css/helper.css
@@ -69,6 +69,7 @@
 .justify-content-sa{ justify-content: space-around; }
 .justify-content-center{ justify-content: center; }
 .justify-content-fe{ justify-content: flex-end; }
+.justify-content-fs{ justify-content: flex-start; }
 .align-items-center{ align-items: center; }
 
 .flex-wrap{ flex-wrap: wrap; }
